First steps to use a no-permission SecurityManager policy file in order to completely lock down the executing bot code