@@ -143,7 +143,8 @@ class MatchExecutor {
         args.add(createJavaExecutablePath());
         args.addAll(createJvmMemoryArguments());
         args.addAll(createMatchRuntimeClassPathArguments());
-        args.addAll(createSysPropArguments(match));
+        args.addAll(createBotArguments(match));
+        args.addAll(createSecurityManagerArguments());
         args.add(MatchRuntimeConstants.MATCH_RUNTIME_MAIN_CLASS_NAME);
         return args;
     }
@@ -186,7 +187,7 @@ class MatchExecutor {
         return file.getName().toLowerCase().endsWith(".jar");
     }
 
-    private List<String> createSysPropArguments(Match match) {
+    private List<String> createBotArguments(Match match) {
         return Arrays.asList(
             createSysPropArgument(MatchRuntimeConstants.BOT_1_JAR_PATH_SYS_PROP_KEY, determineBotJarPath(match.getBot1())),
             createSysPropArgument(MatchRuntimeConstants.BOT_2_JAR_PATH_SYS_PROP_KEY, determineBotJarPath(match.getBot2())),
@@ -197,6 +198,12 @@ class MatchExecutor {
 
     private String createSysPropArgument(String key, String value) {
         return "-D" + key + "=" + value;
+    }
+
+    private List<String> createSecurityManagerArguments() {
+        // The double equal signs for java.security.policy are intended! It means to only use the specified
+        // policy file and not first evaluate the system default policy files, which is what we want.
+        return Arrays.asList("-Djava.security.manager", "-Djava.security.policy==gridwars.policy");
     }
 
     private String determineBotJarPath(Bot bot) {
